# TheCLanguageProject

./: CMakeLists.txt  StringChar.c
online/excercises/: Array.c  BasicFunctions.c  Break.c  CitizenCheckIfElse.c  ComprehensiveBitwiseDemo.c  CurrentTime.c  Equals.c  FunctionParams.c  GlobalVariable.c  InlineCall.c  InputSample.c  IntegerZu_Unsigned.c  MathFunctions.c  MemorySize.c  MoreElseTiming.c  NestedStruct.c  Pointer.c  PointerFunction.c  RecursionCountdown.c  StructPointer.c  bitwiseOrDemo.c  enumSample.c
online/excercises/EvenMore/: BitwiseNot.c  BitwiseSample.c  Bitwise_or_and_demo.c  CheckAkphaNumeric.c  CheckNumber.c  Rotation.c  ShiftLeftRight.c  StructPadding.c  UnionStruct.c  ValueOfChar.c
online/excercises/MoreExercises/: BreakBasedOnSize.c  BrowserEnum.c  CoutdownAndUp.c  MacroSquare.c  MemoryAddress.c  PassStructPointer.c  RandomNumber.c  TypeDefSample.c  abs_Value.c  (+10 more)
tcpl/Chapter2/: BitwiseOrAnd.c  BitwiseShift.c  ConvertCharToInt.c  ConvertFromInt.c  ConvertToCapitals.c  EvenOrOdd.c  IsDigitTest.c  LeapYear.c  LowerCaseConvert.c  RemoveCharFromString.c  StringConcat.c  StrlenSample.c  bitCount.c  bitCountAllZeroes.c  invert.c  rightrot.c  setbits.c
tcpl/Chapter3/: ControlFlow.c  ConvertStringToInt.c  CorrectNestedFlow.c  Exercise3_3.c  IfElseSample1.c  Incorrect_ControlFlow.c  reverseString.c  switch1.c
tcpl/chapter1/: ForLoop.c  GetcharEOF.c  LineCounting.c  PrintWordPerLine.c  ReverseForLoop.c  SimpleBoolean.c  SimplerEOFExample.c  SymbolicConstants.c  TabSample.c  TempWithFloat.cs  Temperature.c  WordCount2.c  WordCounting.c  intro.c
(+18 files in other folders)
