cmake_minimum_required(VERSION 3.10)
project(TheCLanguageProject)

# Set C standard
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

# Set C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add your source files here
# Example: add_executable(your_executable src/main.c)

# If you have libraries or subdirectories, add them:
# add_subdirectory(src)

# Enable testing
enable_testing()
# add_test(NAME your_test COMMAND your_executable)
